[Refactor] getFirst로 변경